--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 base64 = "0.22.1"
 cookie = "0.18.1"
 fantoccini = {git = "https://github.com/jonhoo/fantoccini"}
+ntfy = "0.7.0"
 serde = "1.0.217"
 serde_json = "*"
 tokio = { version = "1", features = ["full"] }
